# alloy

./: .clang-format  .clang-tidy  .clangd  .dockerignore  .gdbinit  .gitignore  .gitmodules  ANALYSIS_STARTUP_CLOCK.md  ARCHITECTURAL_ANALYSIS.md  BRANCH_PLAN.md  BUILD.md  BUILD_GUIDE.md  CHANGELOG.md  CLEANUP_COMPLETE.md  CLEANUP_PLAN.md  CMakeLists.txt  CMakePresets.json  CODE_QUALITY_SETUP.md  CODING_STYLE.md  COMO_RODAR_TESTES.md  COMPREHENSIVE_ANALYSIS.md  COMPREHENSIVE_ANALYSIS_2024-11.md  CONNECTIVITY.md  CONTRIBUTING.md  Dockerfile  Doxyfile  ESP_IDF_INTEGRATION_PHASE1.md  FRAMEWORK_CLEANUP_SUMMARY.md  IMPLEMENTATION_ROADMAP.md  KNOWN_ISSUES.md  LICENSE  LINT_FIXES_SUMMARY.md  MAKEFILE_GUIDE.md  MCU_STATUS.md  MIGRATION_GUIDE.md  MODERNIZATION_PLAN.md  Makefile  Makefile.old  NAMING_CONVENTION.md  NORTH_STAR.md  (+32 more)
benchmarks/: CMakeLists.txt  README.md  benchmark.hpp  gpio_toggle_bench.cpp  interrupt_latency_bench.cpp
drivers/: CMakeLists.txt  DRIVER_SPEC.md  MANIFEST.json  README.md
drivers/filesystem/: CMakeLists.txt
drivers/net/: CMakeLists.txt  ethernet_interface.hpp  network_interface.hpp  phy_driver.hpp
drivers/ota/: ota_client.hpp
examples/api_tiers/: CMakeLists.txt  README.md  expert_adc_dma_logging.cpp  expert_gpio_blink.cpp  expert_i2c_eeprom_dma.cpp  expert_spi_dma.cpp  expert_uart_lowpower.cpp  fluent_adc_multi_channel.cpp  fluent_gpio_blink.cpp  fluent_i2c_multi_sensor.cpp  fluent_spi_display.cpp  fluent_uart_config.cpp  simple_adc_read.cpp  simple_gpio_blink.cpp  simple_gpio_button.cpp  simple_i2c_sensor.cpp  simple_spi_master.cpp  simple_uart_echo.cpp
examples/blink/: CMakeLists.txt  README.md  alloy.toml  main.cpp
examples/blink_arduino_zero/: CMakeLists.txt  main.cpp
examples/blink_esp32/: CMakeLists.txt  main.cpp
examples/blink_rp2040_zero_pio/: CMakeLists.txt  main.c
examples/blink_rp_pico/: CMakeLists.txt  README.md  main.cpp
examples/blink_same70/: CMakeLists.txt  README.md  main.cpp
examples/blink_samv71/: CMakeLists.txt  main.cpp
examples/blink_stm32f103/: CMakeLists.txt  main.cpp
examples/blink_stm32f407/: CMakeLists.txt  main.cpp
examples/blinky/: CMakeLists.txt  README.md  main.cpp
examples/blinky_bluepill/: CMakeLists.txt  README.md  main.cpp
examples/driver_tm1637_probe/: CMakeLists.txt  main.cpp
examples/esp32_dual_core/: CMakeLists.txt  main.cpp
examples/ethernet_basic/: CMakeLists.txt  README.md  main.cpp
examples/filesystem_littlefs/: CMakeLists.txt  README.md  main.cpp
examples/hello_esp32/: CMakeLists.txt  README.md  main.cpp
examples/hello_esp32c3/: CMakeLists.txt  README.md  main.cpp
examples/linux_cmake_test/: CMakeLists.txt  main.cpp
examples/lite_hal_probe/: CMakeLists.txt  main.cpp
examples/logger_basic/: CMakeLists.txt  main.cpp
examples/manual_uart_probe/: CMakeLists.txt  main.cpp
examples/modbus_tcp_slave/: CMakeLists.txt  README.md  main.cpp
examples/portable_blinky/: CMakeLists.txt  main.cpp
tests/: .clang-tidy  CMakeLists.txt  README.md  alloy_test.hpp  alloy_test_helpers.cmake  doubles.hpp  host_support.cpp  main.cpp  test_control.cpp  test_services.cpp  test_util.cpp
tests/codegen/: test_generated_pins.cpp  test_svd_generated_pins.cpp
tests/compile/: README.md  contract_smoke.cmake
tests/compile_tests/: run_all_tests.sh  test_adc_api.cpp  test_async_peripherals.cpp  test_blocking_only_completion_api.cpp  test_board_dma_api.cpp  test_board_i2c_api.cpp  test_board_led_api.cpp  test_board_spi_api.cpp  test_board_uart_api.cpp  test_can_api.cpp  test_clock_hal.cpp  test_connector_kernel.cpp  test_dac_api.cpp  test_device_import_layer.cpp  test_dma_api.cpp  test_driver_aht20.cpp  test_driver_fm25v10.cpp  test_driver_icm42688p.cpp  test_driver_ili9341.cpp  test_driver_ina219.cpp  test_driver_ina3221.cpp  test_driver_lis3mdl.cpp  test_driver_lps22hh.cpp  test_driver_lsm6dsox.cpp  test_driver_max17048.cpp  test_driver_mpu6050.cpp  test_driver_nmea_parser.cpp  test_driver_rc522.cpp  test_driver_seed_at24mac402.cpp  test_driver_seed_bme280.cpp  test_driver_seed_is42s16100f.cpp  test_driver_seed_ksz8081.cpp  test_driver_seed_ssd1306.cpp  test_driver_seed_w25q.cpp  test_driver_sht4x.cpp  test_driver_ssd1306_spi.cpp  test_driver_st7789.cpp  test_driver_sx1276.cpp  test_driver_tm1637.cpp  test_driver_uc8151.cpp  (+66 more)
tests/custom_board/: CMakeLists.txt  board.hpp  custom.ld
tests/downstream_package/: CMakeLists.txt  main.cpp
tests/elf/: CMakeLists.txt
tests/emulation/: CMakeLists.txt
tests/hardware/: CMakeLists.txt  README.md  hw_board_validation.cpp  hw_clock_validation.cpp  hw_gpio_led_test.cpp  hw_i2c_sensor_test.cpp  hw_interrupt_test.cpp  hw_spi_flash_test.cpp  hw_uart_echo_test.cpp
tests/host/: test_gpio_host_policy.cpp
tests/host_mmio/: CMakeLists.txt  selected_config_same70.hpp.in  selected_config_stm32f401re.hpp.in  selected_config_stm32g071rb.hpp.in
tests/integration/: CMakeLists.txt  rtos_integration_test.cpp  test_generated_pins_integration.cpp  test_gpio_clock_integration.cpp  test_initialization_sequence.cpp  test_platform_concepts.cpp
tests/net/: test_lwip_loopback.cpp
tests/perf/: CMakeLists.txt
tests/regression/: CMakeLists.txt  test_concept_regressions.cpp  test_gpio_clock_regressions.cpp  test_result_regressions.cpp
tests/rtos/: CMakeLists.txt  test_framework.hpp  test_main.cpp  test_notification.cpp  test_pool.cpp  test_queue.cpp
tests/unit/: CMakeLists.txt  test_async_completion_timeout.cpp  test_circular_buffer.cpp  test_clock_concept.cpp  test_concepts.cpp  test_cross_core_channel.cpp  test_error.cpp  test_error_code.cpp  test_error_handling.cpp  test_gpio_concept.cpp  test_gpio_host.cpp  test_hal_concepts.cpp  test_interrupt_apis.cpp  test_logger.cpp  test_memory.cpp  test_memory_ordering.cpp  test_ota_client.cpp  test_pin_signal_connection.cpp  test_result.cpp  test_scoped_device.cpp  test_shared_scheduler.cpp  test_signal_registry.cpp  test_signal_tables.cpp  test_spi_apis_catch2.cpp  test_systick_apis.cpp  test_tasks.cpp  test_types.cpp  test_uart_api_integration.cpp  test_uart_fluent_api.cpp  test_uart_hardware_policy.cpp  test_units.cpp  (+3 more)
(+7976 files in other folders)
